Remove mt-3 from custom-legend, fix large gap in popup

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -105,7 +105,7 @@ canvas {
   display: flex;
   align-items: center;
   gap: 20px;
-  @apply mt-3 flex-wrap;
+  @apply flex-wrap;
 }
 .custom-legend-item {
   display: flex;
